<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login Counter</string>
    <string name="action_settings">Settings</string>
    <string name="add_user">Add User</string>
    <string name="logout_button">Logout</string><string name="login_button">Login</string>
    <string name="user_field">Username</string>
    <string name="password_field">Password</string>
    <string name="default_message">Please enter your credentials below:</string>
    <string name="title_activity_welcome_message">WelcomeMessageActivity</string>
    

</resources>