<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password_field"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="39dp"
        android:text="@string/login_button" 
        android:onClick="login"/>

    <Button
        android:id="@+id/AddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Login"
        android:layout_alignBottom="@+id/Login"
        android:layout_alignRight="@+id/password"
        android:text="@string/add_user" 
        android:onClick="addUser"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:ems="10"
        android:hint="@string/user_field" />

    <TextView
        android:id="@+id/message_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/default_message"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>